--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,16 +1,26 @@
+<app-player 
+    *ngFor="let player of game.players; let i = index;" 
+    [ngStyle]="{'top.px': 100 + (i * 120) }"
+    [name]="player" 
+    class="player-position">
+</app-player>
+
+
+
 <div class="field">
 
-
     <div class="card-stack">
-        <img *ngFor="let c of [0,1,2,3]; let i = index;" [ngStyle]="{'right.px': i * 5 }"
-            src="/assets/img/card_cover.png">
-        <img (click)="takeCard()" class="top-card" style="right: 25px;"
-            src="/assets/img/card_cover.png">
-        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 25px;"
-            src="/assets/img/clubs_1.png">
+        <!-- card stack-->
+        <img *ngFor="let c of [0,1,2,3]; let i = index;" [ngStyle]="{'right.px': i * 5 }" src="/assets/img/card_cover.png">
+
+        <img (click)="takeCard()" class="top-card" style="right: 25px;" src="/assets/img/card_cover.png">
+
+        <!-- stack for played cards-->
+        <img *ngFor="let card of game.playedCards" class="played-card" src="/assets/img/{{ card }}.png">
+
+        <!-- stack for current card + animation-->
+        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 25px;"src="/assets/img/{{ currentCard }}.png">
+
     </div>
-
-
-
 
 </div>
