--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -45,3 +45,13 @@
         transform: scale(1.3) translateX(140px) translateY(-180px) rotate(-10deg);
     }
 }
+
+.played-card {
+    transform: scale(1.3) translateX(140px) translateY(-180px) rotate(-10deg);
+    right: 25px;
+}
+
+.player-position {
+    position: absolute;
+    right: 0;
+}
