--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -26,6 +26,8 @@
 
 </div>
 
+<app-game-info class="pin-bottom"></app-game-info>
+
 
 <button mat-fab color="primary" class="btn-add" (click)="openDialog()">
     <mat-icon>add</mat-icon>
