--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -26,7 +26,7 @@
 
 </div>
 
-<app-game-info class="pin-bottom"></app-game-info>
+<app-game-info [card]="currentCard" class="pin-bottom"></app-game-info>
 
 
 <button mat-fab color="primary" class="btn-add" (click)="openDialog()">
