--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -6,6 +6,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.8);
+        z-index: 0;
+    }
 }
 
 .card-stack {
@@ -54,6 +65,7 @@
 .player-position {
     position: absolute;
     right: 0;
+    z-index: 10;
 }
 
 .btn-add {
