--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -5,11 +5,13 @@
     background-color: rgb(182, 182, 182, 0.8);
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
+    
 
 
     span {
         font-size: 32px;
         margin-left: 12px;
+        
     }
 
     img {
@@ -22,5 +24,5 @@
 }
 
 .player-active {
-    background-color: orangered !important;
+    background-color: red !important;
 }
