--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -20,13 +20,13 @@
         <img *ngFor="let card of game.playedCards" class="played-card" src="/assets/img/{{ card }}.png">
 
         <!-- stack for current card + animation-->
-        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 25px;"src="/assets/img/{{ currentCard }}.png">
+        <img (click)="takeCard()" *ngIf="game.pickCardAnimation" class="pick-card" style="right: 25px;"src="/assets/img/{{ game.currentCard }}.png">
 
     </div>
 
 </div>
 
-<app-game-info [card]="currentCard" class="pin-bottom"></app-game-info>
+<app-game-info [card]="game.currentCard" class="pin-bottom"></app-game-info>
 
 
 <button mat-fab color="primary" class="btn-add" (click)="openDialog()">
