media querys | website responsive

--- a/src/app/dialog-add-player/dialog-add-player.component.html
+++ b/src/app/dialog-add-player/dialog-add-player.component.html
@@ -4,7 +4,7 @@
     <p>Please enter the name of new player</p>
     <mat-form-field>
         <mat-label>Name</mat-label>
-        <input matInput [(ngModel)]="name">
+        <input maxlength="8" matInput [(ngModel)]="name">
     </mat-form-field>
 </div>
 <div mat-dialog-actions>
