--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -2,7 +2,8 @@
     *ngFor="let player of game.players; let i = index;" 
     [ngStyle]="{'top.px': 100 + (i * 90) }"
     [playerActive]="i == game.currentPlayer"
-    [name]="player" 
+    [name]="player.name" 
+    [profileImage]="player.profileImage"
     class="player-position">
 </app-player>
 
