--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -29,12 +29,12 @@
 }
 
 .top-card {
-   cursor: pointer;
-   transition: all 125ms ease-in-out;
-   
-   &:hover {
-    transform: scale(1.1) translateY(-10px);
-   }
+    cursor: pointer;
+    transition: all 125ms ease-in-out;
+
+    &:hover {
+        transform: scale(1.1) translateY(-10px);
+    }
 }
 
 .pick-card {
@@ -46,12 +46,15 @@
     0% {
         transform: scale(1);
     }
+
     40% {
         transform: scale(1.7);
     }
+
     60% {
         transform: scale(1.7);
     }
+
     100% {
         transform: scale(1.3) translateX(140px) translateY(-180px) rotate(-10deg);
     }
@@ -79,4 +82,106 @@
     bottom: 32px;
     left: 100px;
     right: 100px;
+    z-index: 20;
+}
+
+@media (max-width: 950px) {
+    .pick-card {
+        animation: pick-card-animation-query950 1s ease-in-out;
+        transform: scale(1.3) translateX(10px) translateY(-180px) rotate(-10deg);
+    }
+
+    @keyframes pick-card-animation-query950 {
+        0% {
+            transform: scale(1);
+        }
+    
+        40% {
+            transform: scale(1.7);
+        }
+    
+        60% {
+            transform: scale(1.7);
+        }
+    
+        100% {
+            transform: scale(1.3) translateX(10px) translateY(-180px) rotate(-10deg);
+        }
+    }
+
+    .played-card {
+        transform: scale(1.3) translateX(10px) translateY(-180px) rotate(-10deg);
+    }
+}
+
+
+@media (max-width: 700px) {
+    .pick-card {
+        animation: pick-card-animation-query700 1s ease-in-out;
+        transform: scale(1.2) translateX(20px) translateY(-200px) rotate(-10deg);
+    }
+
+    @keyframes pick-card-animation-query700 {
+        0% {
+            transform: scale(1);
+        }
+
+        40% {
+            transform: scale(1.5);
+        }
+
+        60% {
+            transform: scale(1.5) ;
+        }
+
+        100% {
+            transform: scale(1.2) translateX(20px) translateY(-200px) rotate(-10deg);
+        }
+    }
+
+    .played-card {
+        transform: scale(1.2) translateX(20px) translateY(-200px) rotate(-10deg);
+    }
+
+    .pin-bottom {
+        bottom: 0;
+        left: 0;
+        right: 0;
+    }
+
+    .btn-add {
+        position: absolute;
+        right: 5%;
+        bottom: 0;
+        top: 2%;
+    }
+}
+
+@media (max-width: 400px) {
+    .pick-card {
+        animation: pick-card-animation-query400 1s ease-in-out;
+        transform: scale(1.1) translateX(20px) translateY(-200px) rotate(-10deg);
+    }
+
+    @keyframes pick-card-animation-query400 {
+        0% {
+            transform: scale(1);
+        }
+
+        40% {
+            transform: scale(1.3);
+        }
+
+        60% {
+            transform: scale(1.3) ;
+        }
+
+        100% {
+            transform: scale(1.1) translateX(20px) translateY(-200px) rotate(-10deg);
+        }
+    }
+
+    .played-card {
+        transform: scale(1.1) translateX(20px) translateY(-200px) rotate(-10deg);
+    }
 }
