--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,4 +1,4 @@
 <div class="player" [class.player-active]="playerActive">
-    <img src="/assets/img/profil.png"> 
+    <img [src]="profileImage">
     <span>{{ name }}</span>
 </div>
