--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -2,7 +2,7 @@
     width: 300px;
     display: flex;
     align-items: center;
-    background-color: rgb(182, 182, 182, 0.8);
+    background-color: rgba(206, 38, 38, 0.582);
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
     
@@ -11,7 +11,6 @@
     span {
         font-size: 32px;
         margin-left: 12px;
-        
     }
 
     img {
@@ -25,4 +24,43 @@
 
 .player-active {
     background-color: red !important;
+}
+
+
+@media (max-width: 700px) {
+    .player {
+        width: 175px;
+
+
+
+        img {
+            height: 50px;
+            width: 50px;
+            margin: 2px
+        }
+
+        span {
+            font-size: 24px;
+            margin-left: 10px;
+        }
+    }
+}
+
+@media (max-width: 400px) {
+    .player {
+        width: 150px;
+
+
+
+        img {
+            height: 50px;
+            width: 50px;
+            margin: 2px;
+        }
+
+        span {
+            font-size: 24px;
+            margin-left: 1px;
+        }
+    }
 }
