--- a/src/app/game-info/game-info.component.html
+++ b/src/app/game-info/game-info.component.html
@@ -1,5 +1,7 @@
 <mat-card>
-    <mat-card-title style="padding-left: 16px;">{{card ? title : 'Please pick a card'}}</mat-card-title>
-    <mat-card-content>{{card ? description : 'Please click on the card stack to select the next card'}}</mat-card-content>
+  <div id="highlightable">
+    <mat-card-title style="padding-left: 16px;">{{card ? title : 'You need to create at least 2 players to start.'}}</mat-card-title>
+    <mat-card-content>{{card ? description : 'After that click on the card stack to select a card.'}}</mat-card-content>
+  </div>
   </mat-card>
   
