--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,11 @@
 body {
     margin: 0;
+    overflow: hidden;
 }
+
+html {
+    overflow: hidden; 
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
