--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -4,3 +4,9 @@
         <img (click)="newGame()" src="assets/img/label.png">
     </div>
 </div>
+
+<div class="licens-container">
+    <span>Images from pixabay.com</span>
+    <span>Icons from icons8.de</span>
+    <span>Card stack back by "jeffshee" from opengameart.org</span>
+</div>
