changed start-screen design

--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -1,7 +1,7 @@
 <div class="start-screen">
     <img src="assets/img/startscreen.png">
     <div class="start-label-box">
-        <img (click)="newGame()" src="assets/img/label.png">
+        <img class="label-img" (click)="newGame()" src="assets/img/label.png">
     </div>
 </div>
 
