--- a/src/app/start-screen/start-screen.component.scss
+++ b/src/app/start-screen/start-screen.component.scss
@@ -1,5 +1,8 @@
 .start-screen {
-    background-color: black;
+    background-image: url('/assets/img/board.jpg');
+    background-position: center; 
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 100vw;
     height: 100vh;
     max-width: 100%;
@@ -7,24 +10,36 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    object-fit: contain;
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.8);
+        z-index: 0;
+    }
 
     img {
         height: 100vh;
         max-width: 100%;
-        object-fit: cover;
+        z-index: 1;
     }
 }
 
 .start-label-box {
     position: absolute;
     left: 50%;
-    top: 62%;
+    top: 68%;
     transform: translate(-50%, -50%);
     display: flex;
+    z-index: 2;
 
     img {
-        width: 300px;
-        height: auto;
+        height: 150px;
 
         &:hover {
             filter: brightness(1.25);
@@ -43,4 +58,5 @@
     left: 0;
     right: 0;
     color: white;
+    z-index: 2;
 }
