--- a/src/app/start-screen/start-screen.component.scss
+++ b/src/app/start-screen/start-screen.component.scss
@@ -1,6 +1,6 @@
 .start-screen {
     background-image: url('/assets/img/board.jpg');
-    background-position: center; 
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     width: 100vw;
@@ -22,18 +22,18 @@
         background-color: rgba(0, 0, 0, 0.8);
         z-index: 0;
     }
+}
 
-    img {
-        height: 100vh;
-        max-width: 100%;
-        z-index: 1;
-    }
+.logo {
+    height: 100vh;
+    max-width: 100%;
+    z-index: 1;
 }
 
 .start-label-box {
     position: absolute;
     left: 50%;
-    top: 68%;
+    top: 64%;
     transform: translate(-50%, -50%);
     display: flex;
     z-index: 2;
@@ -49,14 +49,189 @@
 }
 
 .licens-container {
-    display: flex;
+    color: white;
+    font-size: 23px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: rgba(0, 0, 0, 0.9);
+    animation: slide-in-blurred-right 0.6s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+    z-index: 11;
+    text-align: center;
+
+    @keyframes slide-in-blurred-right {
+        0% {
+            transform: translateX(1000px) scaleX(2.5) scaleY(0.2);
+            transform-origin: 0% 50%;
+            opacity: 0;
+            background-color: rgba(20, 29, 47, 0.9);
+        }
+
+        100% {
+            transform: translateX(0) scaleY(1) scaleX(1);
+            transform-origin: 50% 50%;
+            opacity: 1;
+            background-color: rgba(0, 0, 0, 0.9);
+        }
+    }
+
+    span {
+        margin: 16px;
+    }
+}
+
+.licens-container.active {
+    display: flex;
+}
+
+.licenses {
+    font-size: 18px;
+    text-align: center;
+    z-index: 5;
+    color: white;
     position: absolute;
-    bottom: 32px;
     left: 0;
     right: 0;
-    color: white;
-    z-index: 2;
+    bottom: 22%;
+    cursor: pointer;
+
+    &:hover {
+        color: rgb(196, 196, 196);
+    }
+}
+
+.close-button {
+    position: absolute;
+    top: 10%;
+    right: 10%;
+    cursor: pointer;
+    z-index: 12;
+}
+
+@media (max-width: 850px) {
+    .logo {
+        z-index: 1;
+        height: auto;
+        width: auto;
+    }
+}
+
+@media (max-width: 800px) {
+    .start-label-box {
+        img {
+            height: 120px;
+        }
+    }
+
+    .licenses {
+        bottom: 32px;
+    }
+}
+
+@media (max-width: 740px) {
+    .start-label-box {
+        top: 62%;
+    }
+}
+
+@media (max-width: 600px) {
+    .start-label-box {
+        top: 79%;
+
+        img {
+            height: 125px;
+        }
+    }
+
+    .licenses {
+        bottom: 64px;
+    }
+
+    .logo {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 10px;
+    }
+
+    @media (max-height: 820px) {
+        .start-label-box {
+            top: 85%;
+        }
+
+        .licenses {
+            bottom: 16px;
+        }
+    }
+
+    @media (max-height: 760px) {
+        .start-label-box {
+            top: 56%;
+
+            img {
+                height: 110px;
+            }
+        }
+    }
+}
+
+@media (max-width: 500px) {
+    .start-label-box {
+        top: 79%;
+    }
+
+    .logo {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 10%;
+    }
+}
+
+@media (max-width: 450px) {
+    .start-label-box {
+        top: 79%;
+    }
+
+    .logo {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 15%;
+    }
+}
+
+@media (max-width: 400px) {
+    .start-label-box {
+        top: 77%;
+    }
+
+    .logo {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 20%;
+    }
+
+    @media (max-height: 800px) {
+        .start-label-box {
+            top: 85%;
+        }
+    }
+
+    @media (max-height: 700px) {
+        .logo {
+            top: 10%;
+        }
+
+        .start-label-box {
+            top: 80%;
+        }
+    }
 }
