added game over condition

--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -3,7 +3,7 @@
     <div class="start-label-box">
         <img (click)="newGame()" src="assets/img/label.png">
     </div>
-    <span class="licenses" (click)="toggleLicensContainer()">Licenses</span>
+    <span class="licenses" (click)="toggleLicensContainer()"> - Copyright - </span>
 </div>
 
 <div class="licens-container" [ngClass]="{'active': licensContainerActive}">
