--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -15,7 +15,7 @@
         <!-- card stack-->
         <img *ngFor="let c of [0,1,2,3]; let i = index;" [ngStyle]="{'right.px': i * 6 }" src="/assets/img/card_cover.png">
 
-        <img (click)="takeCard()" class="top-card" style="right: 25px;" src="/assets/img/card_cover.png">
+        <img (click)="takeCard();" class="top-card" style="right: 25px;" src="/assets/img/card_cover.png">
 
         <!-- stack for played cards-->
         <img *ngFor="let card of game.playedCards" class="played-card" src="/assets/img/{{ card }}.png">
@@ -25,6 +25,12 @@
 
     </div>
 
+</div>
+
+<div class="game-over" [ngClass]="{'active': gameOverActive}">
+    <h1>Game Over</h1>
+    <span>Play again :</span>
+    <img (click)="closeGameOver()"  src="assets/img/label.png">
 </div>
 
 <app-game-info [card]="game.currentCard" class="pin-bottom"></app-game-info>
