--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -160,6 +160,61 @@
     }
 }
 
+.game-over {
+    color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.9);
+    animation: slide-in-blurred-right 0.6s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+    z-index: 30;
+    text-align: center;
+
+    @keyframes slide-in-blurred-right {
+        0% {
+            transform: translateX(1000px) scaleX(2.5) scaleY(0.2);
+            transform-origin: 0% 50%;
+            opacity: 0;
+            background-color: rgba(0, 0, 0, 0.9);
+        }
+
+        100% {
+            transform: translateX(0) scaleY(1) scaleX(1);
+            transform-origin: 50% 50%;
+            opacity: 1;
+            background-color: rgba(0, 0, 0, 0.9);
+        }
+    }
+
+    h1 {
+        font-size: 60px;
+    }
+
+    span {
+        margin: 16px;
+        font-size: 23px;
+    }
+
+    img {
+        height: 150px;
+
+        &:hover {
+            filter: brightness(1.25);
+            cursor: pointer;
+        }
+    }
+}
+
+.game-over.active {
+    display: flex;
+}
+
 @media (max-width: 400px) {
     .pick-card {
         animation: pick-card-animation-query400 1s ease-in-out;
